--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -90,3 +90,4 @@ hello_username: 'Bonjour {username}'
 'Choix de la langue': 'Choix de la langue'
 Anglais: Anglais
 Français: Français
+Titre d' une série ou nom de famille d' un acteur jouant dedans: Titre d' une série ou nom de famille d' un acteur jouant dedans
